static/css/custom.css
/* base start */


body {
    font-family: 'Poppins', sans-serif;
    background: #fafafa;
}

.badge {
    padding-left: 9px;
    padding-right: 9px;
    /* -webkit-border-radius: 9px;
    -moz-border-radius: 9px; */
    border-radius: 9px;
}

.badge-warning[href] {
    background-color: #c67605;
}

p {
    font-family: 'Poppins', sans-serif;
    font-size: 1.1em;
    font-weight: 300;
    line-height: 1.7em;
    color: #999;
}

a, a:hover, a:focus {
    color: inherit;
    text-decoration: none;
    transition: all 0.3s;
}

.navbar {
    padding: 15px 10px;
    background: #fff;
    border: none;
    border-radius: 0;
    margin-bottom: 0px;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
}



.nav-fix-top {
    position: sticky; 
    z-index: 20; 
    top: 0;
}
.navbar-nav.navbar-center {
    position: absolute;
    left: 50%;
    transform: translatex(-50%);
}
.navbar-btn {
    box-shadow: none;
    outline: none !important;
    border: none;
}

.nav-logo {
    padding-top: 0px;
    padding-bottom: 0px;
}

.gold{
	color: #FFBF00;
}

.search-test {
    margin-top: 10px !important;
}

.footer-fix-bottom {
    margin-top: 40px;
    padding-top: 20px;
    padding-bottom: 20px;
    border-top: 1px solid #ededed;
    color: #A9A9A9;
    background: #343a40;
    padding: 40px;


}

.row {
    margin: 0px
}

.wrapper{
    min-height: calc(100vh - 255px);
    padding-top: 40px;

}


.special-color-dark {
    background: #343a40;


}

footer a {
    color: #f8f9fa!important
}




/* Accounts start */
.account-form {
    padding-left: 20px;
    padding-right: 20px;
}

.accountform {
    padding-top: 20px;
}

/* Accounts end */



/* cart start */


.product {
    background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
    height: 150px;
    width: 100px;
    margin: 0 auto;

}


/* cart end */



/* checkout start */

/* checkout end  */

/* products start */

.card-body {
    text-align: center;
}

.card-footer {
    background-color: white;
    border-color: white;
    position:absolute;
    bottom:10px;
    /* margin-left: 25%;
    margin-bottom: 10px; */
}

.product-title{
	font-size: 20px;
}

.product-desc{
	font-size: 14px;
}

.product-price{
	font-size: 22px;
}

.product-info{
		margin-top: 50px;
}

.container-fluid{
	max-width: 1140px;
	margin: 0 auto;
}

.view-wrapper {
	float: right;
	max-width: 70%;
	margin-top: 25px;
}

.content-wrapper {
	max-width: 1140px;
	background: #fff;
	margin: 0 auto;
	margin-top: 25px;
	margin-bottom: 10px;
	border: 0px;
	border-radius: 0px;
}



.container {
	padding-left: 0px;
	padding-right: 0px;
	max-width: 100%;
}


.pagination {
    margin-top: 20px;
}
/* products end */


/* home start */

/* home end  */


/* Error page styling start */
.error-code {
   margin-bottom: 20px;
  color: #facf5a;
  text-align: center;
  font-family: 'Raleway';
  font-size: 90px;
  font-weight: 800;
}

.error-text {
    color: #455d7a;
    text-align: center;
    font-family: 'Raleway';
    font-size: 30px;
    text-transform: uppercase;
}

.error-text-small {
    color: #455d7a;
    text-align: center;
    font-family: 'Raleway';
    font-size: 15px;
}

.error-button {
    background-color: #facf5a;
    color: #455d7a;
    justify-content: center;
    font-family: 'Raleway';
}

/* Error page styling end */



/* ths is a test */





@media (max-width: 992px) {
    .navbar-header {
        float: none;
    }
    .navbar-left,.navbar-right {
        float: none !important;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
		top: 0;
		border-width: 0 0 1px;
	}
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
		margin-top: 7.5px;
	}
	.navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .collapse.in{
  		display:block !important;
	}
}

